# rust-webdev-playground

./: .travis.yml  Cargo.toml  README.md
templates/: index.hbs  login.hbs
