[package]
name = "webdemo"
version = "0.1.0"
authors = ["Thorben Kroeger <thorbenkroeger@gmail.com>"]

[dependencies]
iron = "^0.2.2"
router = "^0.0.15"
handlebars-iron = "^0.9.0"
staticfile = "^0.0.6"
mount = "^0.0.9"
cookie = "^0.1.21"
oven = "^0.2.15"
urlencoded = "^0.2.0"
url = "^0.2.37"
rand = "^0.3.11"
chrono = "^0.2.16"

[dependencies.persistent]
git = "https://github.com/iron/persistent"

[dependencies.logger]
git = "https://github.com/iron/logger"
