[package]
name = "webdemo"
version = "0.1.0"
authors = ["Thorben Kroeger <thorbenkroeger@gmail.com>"]

[dependencies]
cookie = "*"
iron = "^0.2.6"
router = "^0.0.16"
handlebars-iron = "^0.9.1"
staticfile = "^0.0.6"
persistent = "^0.0.8"
logger = "^0.0.3"
mount = "^0.0.9"
oven = "^0.2.16"
urlencoded = "^0.2.0"
url = "^0.5.0"
rand = "^0.3.11"
chrono = "^0.2.17"

